New-Upload-1755854042013/objects/Object_Permission_admn__c.object
<CustomObject>
    <fields>
        <fullName>Create__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Edit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Edit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Modify_All__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Modify All</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Object_Name__c</fullName>
        <label>Object Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Permission_Set__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Permission Set</label>
        <referenceTo>Permission_Set_admn__c</referenceTo>
        <relationshipLabel>Object Permissions</relationshipLabel>
        <relationshipName>Object_Permissions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Profile__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Profile</label>
        <referenceTo>Profile_admn__c</referenceTo>
        <relationshipLabel>Object Permissions</relationshipLabel>
        <relationshipName>Object_Permissions</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Read__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Read</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>View_All__c</fullName>
        <defaultValue>false</defaultValue>
        <label>View All</label>
        <type>Checkbox</type>
    </fields>
    <label>Object Permission</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>OP-{0000}</displayFormat>
        <label>Object Permission Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Object Permissions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>